
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-08-21 Jean-François Viaud <jviaud@univ-lr.fr>
	+ src/fr/kbertet/lattice/io/ContextReaderBurmeister.java
	+ src/fr/kbertet/lattice/io/ContextReaderBurmeister.iuml
	+ src/fr/kbertet/lattice/io/ContextWriterBurmeister.java
	+ src/fr/kbertet/lattice/io/ContextWriterBurmeister.iuml
	* src/fr/kbertet/lattice/Context.java
	* test/fr/kbertet/lattice/ContextText.java
	+ examples/cxt

2014-07-08 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/lattice/BijectiveComponents.java
	* test/fr/kbertet/lattice/BijectiveComponentsTest.java
		^ Use getReducedLattice method
		^ Use setClosureSystem and getClosureSystem instead of setInit and getInit in BijectiveComponents

2014-06-28 Jean-François Viaud <jviaud@univ-lr.fr>
	* doc/tutorial/generate_tutorial.sh
		^ Correct classpath issues

2014-06-27 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/package-info.java
	* src/fr/kbertet/lattice/Couple.iuml
	* src/fr/kbertet/lattice/Couple.java
	* src/fr/kbertet/lattice/Lattice.iuml
	* src/fr/kbertet/lattice/Lattice.java
	* src/fr/kbertet/lattice/Permutation.iuml
	* src/fr/kbertet/lattice/Permutation.java
		^ Setters return this for chaining

2014-06-27 Christophe Demko <chdemko@gmail.com>
	* doc/api/README.md
	* examples/Examples.java
	* src/fr/kbertet/dgraph/DGraph.java
	* src/fr/kbertet/dgraph/Node.java
	* src/fr/kbertet/lattice/BijectiveComponents.iuml
	* src/fr/kbertet/lattice/BijectiveComponents.java
	* src/fr/kbertet/lattice/ClosureSystem.java
	* src/fr/kbertet/lattice/Concept.java
	* src/fr/kbertet/lattice/ConceptLattice.iuml
	* src/fr/kbertet/lattice/ConceptLattice.java